tests/errors/missing_condition_on_branch.odl
main :: () -> void {
    if x := 0; then return;
};